--- a/views/partials/loginForm.ejs
+++ b/views/partials/loginForm.ejs
@@ -1,6 +1,6 @@
 <form id="loginForm" action="/login" method="post">
   <div class="field-body">
-    <div class="field is-grouped nav-item is-tab">
+    <div class="field nav-item is-tab">
       <p class="control is-expanded">
         <input class="input" type="email" name="email" placeholder="Email">
       </p>
