--- a/views/partials/registerModal.ejs
+++ b/views/partials/registerModal.ejs
@@ -30,9 +30,7 @@
   </div>
   <div class="field">
     <p class="control">
-      <button type="submit" class="button is-success">
-        Login
-      </button>
+      <button type="submit" class="button is-success">Register</button>
       <a class="button modalClose">Cancel</a>
     </p>
   </div>
