--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,8 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+  <%# <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>%>
+
   <script src="/js/client.js" charset="utf-8"></script>
 
 </head>
@@ -32,11 +34,6 @@
     <%- body %>
     <%- include ./partials/registerModal %>
   </main>
-  <script type="text/javascript">
-    $('.deleteNotification').on('click', () => {
-      // locals.message = '';
-      $('.notification').remove();
-    });
-  </script>
+
 </body>
 </html>
