--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,12 +6,12 @@
       </a>
       <%# links here %>
     </div>
-    <span class="nav-toggle">
+    <span class="nav-toggle" id="nav-toggle">
       <span></span>
       <span></span>
       <span></span>
     </span>
-    <div class="nav-right nav-menu">
+    <div class="nav-right nav-menu" id="nav-menu">
 
       <% if (locals.isLoggedIn) { %>
         <a class="nav-item is-tab" href="/logout">Log out</a>
