I was passing around the user.id when i should have been using res.locals.user.id, so i fixed it

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 * {
   font-family: 'Raleway', sans-serif;
 }
-div, .nav-menu, .modal > * {
+div, .nav-menu, .is-active, .modal > * {
   -webkit-transition: all linear .2s;
   -moz-transition: all linear .2s;
   transition: all linear .2s;
